--- a/004a-form-api.solved.html
+++ b/004a-form-api.solved.html
@@ -119,7 +119,7 @@
     <tr>
         <td>Meter</td>
         <td>
-            <meter value="0.9" low="0.3" high="0.8"></meter>
+            <meter value="0.9" low="0.6" high="0.8" optimum="0.5"></meter>
         </td>
     </tr>
 </table>
