--- a/032-ajax-fun.html
+++ b/032-ajax-fun.html
@@ -5,19 +5,48 @@
     <title>Ajax Fun</title>
     <style>
         .box{
-            width: 450px;
-            height: 150px;
+            width: 670px;
+            height: 320px;
             background-color: #999999;
             font-family: Arial;
             font-size: 20px;
             text-align: justify;
             padding: 10px;
             margin: auto;
+            overflow: auto;
         }
         button{
             display: block;
             width: 470px;
             margin: 10px auto;
+        }
+        .hero{
+            width: 200px;
+            height: 280px;
+            background-color: #747AF2;
+            border: 2px solid #333333;
+            float: left;
+            margin: 5px;
+        }
+        .hero h1{
+            font-family: Arial;
+            font-size: 30px;
+            color: #C9C9C9;
+            text-align: center;
+            margin: 0px;
+        }
+        .hero img{
+            width: 100%;
+        }
+        .hero h3{
+            font-family: Arial;
+            font-size: 14px;
+            color: #C9C9C9;
+            margin: 0px;
+        }
+        .hero input{
+            display: block;
+            width: 90%;
         }
     </style>
     <script>
@@ -26,10 +55,15 @@
             xhr.addEventListener("readystatechange", function(){
                 console.log(xhr.readyState);
                 if(xhr.readyState == 4 & xhr.status == 200){
-                    document.querySelector(".box").innerHTML += xhr.responseText;
+                   //  document.querySelector(".box").innerHTML += xhr.responseText;
+                    var data = JSON.parse(xhr.responseText);
+                    for(var i = 0; i < data.heroes.length; i++){
+                        document.querySelector(".box").innerHTML+= '<div class="hero"><h1>Batman</h1><img src="images/batman.jpg"><h3>City : <span>Gotham</span> | Movies : <span>3</span></h3><input type="range" value="8" min="0" max="10"/></div>';
+                    }
+                    // document.querySelector(".box").innerHTML = data.heroes[1].title;
                 }
             })
-            xhr.open("get", "data/data.txt", true);
+            xhr.open("get", "data/heroes.json", true);
 
             document.querySelector("button").addEventListener("click", function(){
                 xhr.send();
@@ -40,5 +74,14 @@
 <body>
     <button>Click Me</button>
     <div class="box"></div>
+<hr/>
+    <!--
+<div class="hero">
+    <h1>Batman</h1>
+    <img src="images/batman.jpg">
+    <h3>City : <span>Gotham</span> | Movies : <span>3</span></h3>
+    <input type="range" value="8" min="0" max="10"/>
+</div>
+    -->
 </body>
 </html>
